--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,19 @@
   padding: 0px 5px;
 }
 
-.heading{
+.heading {
   background-color: gray;
   text-align: center;
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
 }
